Use ng-cloak to avoid flickering on page load

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -298,6 +298,15 @@ i.group-icon :hover {
 
 /* end search */
 
+/*
+  Allow angular.js to be loaded in body, hiding cloaked elements until
+  templates compile.  The !important is important given that there may be
+  other selectors that are more specific or come later and might alter display.
+ */
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
+
 .page-header {
     margin-top: 10px;
     margin-bottom: 10px;
